# strava-activity-downloader

./: .gcloudignore  .gitignore  Cargo.toml  Deploy.md  Dockerfile  README.md
conf/: application.yaml  application.yaml.example
console/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
console/src/: App.tsx  ServerStatus.ts  StatusTable.tsx
map/: index.html  package-lock.json  package.json  vite.config.ts
map/src/: App.tsx  LocationContainer.tsx  TileCache.ts  TileContainer.tsx  TileOverlays.tsx  loadTiles.ts  main.tsx
server/: Cargo.toml
server/src/: lib.rs
server/src/database/: activity_table.rs  db_executor.rs  db_types.rs  maptile_table.rs  mod.rs
server/src/domain/: activity.rs  activity_stats.rs  download_state.rs  map_tile_bounds.rs  track_store_state.rs
server/src/oauth/: oauth_client.rs  token.rs
server/src/rest/: http_server.rs  mod.rs  oauth_handlers.rs  rest_handlers.rs  rest_paths.rs  timing_layer.rs
server/src/service/: activity_service.rs  download_scheduler.rs  mod.rs
server/src/state/: shared_state.rs
server/src/track/: mod.rs  track_storage.rs
server/src/util/: iso8601.rs
src/: activity_service.rs  downloader.rs  lib.rs  main.rs  scheduler.rs  shared_state.rs  state.rs
src/auth/: client.rs  token.rs
src/database/: activity_table.rs  maptile_table.rs  mod.rs  state_table.rs  tile_table.rs
src/domain/: activity.rs  activity_map.rs  activity_stats.rs  activity_stream.rs  download_delay.rs  download_state.rs  gpx_store_state.rs  map_tile.rs  map_tile_zoom.rs  map_zoom.rs  mod.rs  server_status.rs  status.rs  tile.rs
src/oauth/: client.rs  mod.rs  oauth_client.rs  token.rs
src/rest/: handlers.rs  http_server.rs  mod.rs  oauth.rs  oauth_handlers.rs  paths.rs  rest_handlers.rs  rest_paths.rs  server.rs
src/service/: activity_service.rs  download_scheduler.rs
src/state/: shared_state.rs
src/track/: mod.rs  read_track.rs  track_path.rs  write_track.rs
src/util/: coords2tile.rs  gpx_path.rs  iso8601.rs  jwt.rs  mod.rs  write_gpx.rs
tilemap/: PLAN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tilemap/src/: App.css  App.tsx  ExplorerLines.tsx  GPSTrackPolyline.tsx  LocationContainer.tsx  LocationMarker.tsx  LocationWatcher.tsx  TileBounds.ts  TileCache.ts  TileContainer.tsx  TileDetector.tsx  TileFetcher.tsx  TileOverlays.tsx  TilePanes.tsx  loadTiles.ts  useCandidateStore.ts  useDetectedTiles.ts  useFetchedTiles.ts  useLocation.ts  useLocationStore.ts  usePositionTracker.ts  useTileStore.ts
web/: index.html  vite.config.ts
web/src/: App.tsx  LoginButton.tsx  ServerStatus.ts  Status.ts  StatusTable.tsx  ToggleButton.tsx  index.css
(+6 files in other folders)
