[package]
name = "strava-gpx-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.75"
axum = "0.7"
axum-macros = "0.4"
config = "0.13.4"
env_logger = "0.10.1"
log = "0.4.20"
oauth2 = "4.4.2"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
thiserror = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
url = "2.5.0"
