[package]
name = "strava-gpx-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.7"
axum-macros = "0.4"
config = "0.13.4"
const_format = "0.2.32"
env_logger = "0.10.1"
futures = "0.3"
iso8601-timestamp = "0.2"
log = "0.4.20"
oauth2 = "4.4.2"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = {version = "0.30", features = ["bundled"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors","fs"] }
url = "2.5.0"
