[package]
name = "strava_activity_downloader"
version = "0.1.0"
edition = "2021"
default-run = "strava_downloader"

[dependencies]
async-stream = "0.3"
axum = "0.8"
axum-macros = "0.5"
config = "0.15"
const_format = "0.2"
env_logger = "0.11"
futures = "0.3"
geo-types = "0.7"
gpx = "0.10"
humantime = "2.2"
iso8601-timestamp = "0.4"
log = "0.4"
oauth2 = "5.0"
pin-project-lite = "0.2"
reqwest = { version = "0.13", features = ["json", "query", "form"] }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
thiserror = "2.0"
tokio = { version = "1.50", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors","fs"] }
url = "2.5"

[dev-dependencies]
urlencoding = "2.1.3"
wiremock = "0.6"
